<resources>
    <string name="app_name">Хочу помочь</string>

    <string name="splash_loading_text">Загрузка...</string>

    <string name="title_news">Новости</string>


    <string name="title_search">Поиск</string>
    <string name="search_text_background">Введите название организации</string>


    <string name="title_help">Помощь</string>
    <string name="sub_title_help">Выберите категорию помощи</string>


    <string name="title_history">История</string>





    <string name="title_profile">Профиль</string>

    <string name="proile_dialog_choose_photo">Выбрать фото</string>
    <string name="proile_dialog_take_photo">Сделать снимок</string>
    <string name="proile_dialog_remove_photo">Удалить</string>

    <string name="profile_name">Константинов Денис</string>

    <string name="profile_text_born_date">01 февраля 1980</string>
    <string name="profile_text_born_date_title">Дата рождения</string>

    <string name="profile_text_occupation_title">Сфера деятельности</string>
    <string name="profile_text_occupation"> Хирургия, травмотология</string>
    <string name="profile_text_get_push">Получать push-уведомления </string>

    <string name="profile_text_yours_friends">Ваши друзья</string>
    <string name="profile_text_friend1">Дмитрий Валерьевич</string>
    <string name="profile_text_friend2">Евгений Александров</string>
    <string name="profile_text_friend3">Виктор Кузнецов</string>

    <string name="profile_button_exit">Выйти из аккаунта</string>

    <string name="bottom_navigtion_news">Новости</string>
    <string name="bottom_navigtion_search">Поиск</string>
    <string name="bottom_navigtion_help">Помочь</string>
    <string name="bottom_navigtion_history">История</string>
    <string name="bottom_navigtion_profile">Профиль</string>

</resources>
