<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_navigtion_news"
        android:icon="@drawable/news"
        android:state_checked="false"
        android:title="@string/bottom_navigtion_news"/>
    <item
        android:id="@+id/bottom_navigtion_search"
        android:icon="@drawable/search"
        android:state_checked="false"
        android:title="@string/bottom_navigtion_search"/>
    <item
        android:id="@+id/bottom_navigtion_help"
        android:icon="@drawable/heart"
        android:state_checked="false"
        android:title="@string/bottom_navigtion_help"/>
    <item
        android:id="@+id/bottom_navigtion_history"
        android:icon="@drawable/history"
        android:state_checked="false"
        android:title="@string/bottom_navigtion_history"/>
    <item
        android:id="@+id/bottom_navigtion_profile"
        android:icon="@drawable/profile"
        android:state_checked="true"
        android:title="@string/bottom_navigtion_profile"/>
</menu>