<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/fragment_profile_dialog_choose_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/profile_dialog_choose_photo_image_margin_start"
        android:layout_marginTop="@dimen/profile_dialog_choose_photo_image_margin_top"
        android:src="@drawable/upload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/fragment_profole_dialog_choose_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/profile_dialog_choose_photo_text_margin_start"
        android:layout_marginTop="32dp"
        android:text="@string/proile_dialog_choose_photo"
        android:textColor="@color/black_87"
        android:textSize="@dimen/profile_dialog_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/fragment_profile_dialog_choose_image"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/fragment_profile_dialog_camera_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/profile_dialog_take_photo_image_margin_start"
        android:layout_marginTop="@dimen/profile_dialog_take_photo_image_margin_top"
        android:src="@drawable/camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_profile_dialog_choose_image"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/fragment_profole_dialog_camera_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/profile_dialog_take_photo_text_margin_start"
        android:layout_marginTop="@dimen/profile_dialog_take_photo_text_margin_top"
        android:layout_marginEnd="@dimen/profile_dialog_take_photo_image_margin_top"
        android:text="@string/proile_dialog_take_photo"
        android:textColor="@color/black_87"
        android:textSize="@dimen/profile_dialog_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/fragment_profile_dialog_camera_image"
        app:layout_constraintTop_toBottomOf="@+id/fragment_profole_dialog_choose_text"
        />

    <ImageView
        android:id="@+id/fragment_profile_dialog_remove_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/profile_dialog_remove_photo_image_margin_start"
        android:layout_marginTop="@dimen/profile_dialog_remove_photo_image_margin_top"
        android:src="@drawable/delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_profile_dialog_camera_image"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/fragment_profole_dialog_remove_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/profile_dialog_remove_photo_text_margin_start"
        android:layout_marginTop="@dimen/profile_dialog_remove_photo_text_margin_top"
        android:layout_marginBottom="@dimen/profile_dialog_choose_photo_text_margin_top"
        android:text="@string/proile_dialog_remove_photo"
        android:textColor="@color/black_87"
        android:textSize="@dimen/profile_dialog_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/fragment_profile_dialog_remove_image"
        app:layout_constraintTop_toBottomOf="@+id/fragment_profole_dialog_camera_text" />


</androidx.constraintlayout.widget.ConstraintLayout>